# CHARON-Server

./: .cproject  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.md  ceedling.cmd  cleanCMakeCache.bat  codeanalysis.bat  cppcheck.xml  documentation.bat  project.yml  runCharonBuilder.cmd
Templates/: CMakeLists.txt  Template.h
architecture/: SWDesign.eapx  SWDesign.ldb
ceedling/: unity.xsl
documentation/: Doxyfile  group_definitions.c
port/: CMakeLists.txt
port/demo/: CMakeLists.txt  project.yml
port/demo/inc/: demo.h
port/demo/inc/config/: charon_config.h
port/demo/inc/demo_features/: demo.h
port/demo/src/: CMakeLists.txt  NvmEmulator.c  charon_interface_debug.c  demo.c  main.c  pipe.c  terminal.c  timer.c  uart.c
port/demo/src/NvmEmulator/: CMakeLists.txt  NvmEmulator.c
port/demo/src/Pipe/: CMakeLists.txt  pipe.c
port/demo/src/Terminal/: CMakeLists.txt  terminal.c
port/demo/src/Timer/: CMakeLists.txt  timer.c
port/demo/src/Uart/: CMakeLists.txt  uart.c
port/demo/src/config/: CMakeLists.txt
port/demo/src/demo_features/: CMakeLists.txt  demo.c
port/demo/src/interface_debug/: CMakeLists.txt  charon_interface_debug.c
port/demo/src/main/: main.c
port/demo/systemtest/: main.c
port/standalone/: CMakeLists.txt
port/standalone/config/: CMakeLists.txt  charon_config.h
port/standalone/inc/: charon_Dummy.h
port/standalone/src/: charon_Dummy.c
port/standalone/src/config/: CMakeLists.txt
port/stm32f4-discovery/: CMakeLists.txt  STM32F4-Discovery.ioc  project.yml
port/stm32f4-discovery/Drivers/CMSIS/: CMakeLists.txt
port/stm32f4-discovery/Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
port/stm32f4-discovery/Inc/: uart.h
port/stm32f4-discovery/Inc/Timer/: timer.h
port/stm32f4-discovery/Src/: CMakeLists.txt  NvmEmulator.c  main.c  timer.c  uart.c
port/stm32f4-discovery/Src/NvmEmulator/: CMakeLists.txt
port/stm32f4-discovery/Src/Timer/: CMakeLists.txt
port/stm32f4-discovery/Src/Uart/: CMakeLists.txt  uart.c
port/stm32f4-discovery/Src/config/: CMakeLists.txt
port/stm32f4-discovery/Src/main/: CMakeLists.txt
port/stm32f4-discovery/Src/stm32f4xx_hal_conf/: CMakeLists.txt
port/stm32f4-discovery/Src/stm32f4xx_hal_msp/: CMakeLists.txt
port/stm32f4-discovery/Src/stm32f4xx_it/: CMakeLists.txt
port/stm32f4-discovery/Src/system_stm32f4xx/: CMakeLists.txt
port/stm32f4-discovery/config/: CMakeLists.txt  charon_config.h
port/windows/: CMakeLists.txt  ceedling.cmd  project.yml
port/windows/config/: CMakeLists.txt  charon_config.h
port/windows/include/config/: charon_config.h
port/windows/include/showcaseData/: showcaseData.h
port/windows/src/: CMakeLists.txt  NvmEmulator.c  charon_interface_debug.c  main.c  pipe.c  terminal.c  timer.c  uart.c
port/windows/src/NvmEmulator/: CMakeLists.txt
port/windows/src/Pipe/: CMakeLists.txt
port/windows/src/Terminal/: CMakeLists.txt
port/windows/src/Timer/: CMakeLists.txt
port/windows/src/Uart/: CMakeLists.txt
port/windows/src/config/: CMakeLists.txt
port/windows/src/interface_debug/: CMakeLists.txt  charon_interface_debug.c
port/windows/src/main/: main.c
port/windows/src/showCaseData/: CMakeLists.txt  showcaseData.c
port/windows/systemtest/: main.c
src/: CMakeLists.txt  uds.c  uds.h  uds_DiagnosticAndCommunicationManagementFunctionalUnit.h  (+11 more)
src/BusinessLogic/: CMakeLists.txt  Charon_DTC_LookupTable.c  charon_DataLookupTable.c  charon_DataTransmissionFunctionalUnit.c  charon_DiagnosticAndCommunicationManagementFunctionalUnit.c  charon_InputOutputControlFunctionalUnit.c  charon_RoutineFunctionalUnit.c  charon_StoredDataTransmissionFunctionalUnit.c  charon_UploadDownloadFunctionalUnit.c
src/BusinessLogic/DTCLookupTable/: CMakeLists.txt
src/BusinessLogic/DataLookupTable/: CMakeLists.txt  charon_DataLookupTable.c
src/BusinessLogic/DataTransmissionFunctionalUnit/: CMakeLists.txt  charon_DataTransmissionFunctionalUnit.c
src/BusinessLogic/DiagnosticAndCommunicationManagementFunctionalUnit/: CMakeLists.txt
src/BusinessLogic/InputOutputControlFunctionalUnit/: CMakeLists.txt
src/BusinessLogic/RoutineFunctionalUnit/: CMakeLists.txt  charon_RoutineFunctionalUnit.c
src/BusinessLogic/StoredDataTransmissionFunctionalUnit/: CMakeLists.txt
src/BusinessLogic/UploadDownloadFunctionalUnit/: CMakeLists.txt  charon_UploadDownloadFunctionalUnit.c
src/ComLogic/: CMakeLists.txt  charon_ServiceLookupTable.c  charon_SessionAndServiceControl.c
src/ComLogic/ServiceLookupTable/: CMakeLists.txt
src/ComLogic/SessionAndServiceControl/: CMakeLists.txt  charon_SessionAndServiceControl.c
src/Common/: CMakeLists.txt  charon_crc16.c  charon_negativeResponse.c
src/Common/Crc16/: CMakeLists.txt  charon_crc16.c
src/Common/NegativeResponse/: CMakeLists.txt  charon_negativeResponse.c
src/Common/Types/: CMakeLists.txt
src/HSDI/: CMakeLists.txt
src/HSDI/interface_NvmDriver/: CMakeLists.txt
src/HSDI/interface_clock/: CMakeLists.txt
src/HSDI/interface_debug/: CMakeLists.txt
src/Interface/: CMakeLists.txt  charon_uds.c
src/Interface/Logo/: CMakeLists.txt
src/Interface/Socket/: CMakeLists.txt  DevNullSocket.c
src/Interface/Uds/: CMakeLists.txt
src/Port/STM32F4-Discovery/: .mxproject  CMakeLists.txt  Makefile  linkerfile.ld  project.yml
src/Port/STM32F4-Discovery/Drivers/: CMakeLists.txt
src/Port/STM32F4-Discovery/Drivers/CMSIS/: CMakeLists.txt
src/Port/STM32F4-Discovery/Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
src/Port/STM32F4-Discovery/Inc/: stm32f4xx_it.h  timer.h  uart.h
src/Port/STM32F4-Discovery/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/Port/STM32F4-Discovery/src/: NvmEmulator.c  SystemStartup.c  main.c  timer.c  uart.c
src/Port/Windows/: CMakeLists.txt  project.yml
src/Port/Windows/config/: charon_config.h
src/Port/Windows/src/: CMakeLists.txt  NvmEmulator.c  charon_interface_debug.c  main.c  pipe.c  timer.c  uart.c
src/Port/Windows/src/HSDI/: CMakeLists.txt  charon_interface_debug.h
src/Port/Windows/systemtest/: main.c
src/Sockets/DevNullSocket/: CMakeLists.txt  DevNullSocket.c
(+65 files in other folders)
